[package]
name = "hyper-tls"
version = "0.6.0"                                             # don't forget html_root_url in lib.rs
description = "Default TLS implementation for use with hyper"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT/Apache-2.0"
keywords = ["hyper", "tls", "http", "https", "ssl"]
homepage = "https://hyper.rs"
repository = "https://github.com/hyperium/hyper-tls"
documentation = "https://docs.rs/hyper-tls"
edition = "2018"
rust-version = "1.63"

[features]
alpn = ["native-tls/alpn"]
vendored = ["native-tls/vendored"]

[dependencies]
bytes = "1"
hyper = { git = "https://github.com/getsentry/hyper", rev="f63c131545499b0c32eb1315224ce2823d8d5fda"  }
hyper-util = { git = "https://github.com/getsentry/hyper-util", rev = "577f70dceb65e8e9dff3dc8c19e79ce877a15cbc", features = ["client-legacy", "tokio"] }
native-tls = "0.2.1"
tokio = "1"
tokio-native-tls = "0.3"
tower-service = "0.3"

[dev-dependencies]
http-body-util = "0.1.0"
hyper-util = { git = "https://github.com/getsentry/hyper-util", rev = "577f70dceb65e8e9dff3dc8c19e79ce877a15cbc", features = ["http1"] }
tokio = { version = "1.0.0", features = ["io-std", "macros", "io-util"] }
